# smidge

./: Makefile  README.md  pyproject.toml
src/recipes/: main.py
src/smidge/: __init__.py  main.py  rendering.py
tests/recipes/: test_parse_recipe.py
