[project]
name = "recipes"
version = "0.1.0"
description = "A Python library and CLI utility that parses structured recipe text with custom markup syntax, supporting recipe components, steps, ingredients, and YAML frontmatter metadata."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.2",
    "pytest>=8.3.5",
]
